erDiagram
  USERS {
    UUID id PK
    STRING username
    STRING email
    STRING preferredName
    STRING avatar
    TIMESTAMP createdAt
    TIMESTAMP updatedAt
  }
  GALLERY_ALBUMS {
    UUID id PK
    UUID userId FK
    STRING title
    STRING description
    UUID coverImageId FK
    TIMESTAMP createdAt
    TIMESTAMP lastUpdatedAt
  }
  GALLERY_IMAGES {
    UUID id PK
    UUID userId FK
    STRING title
    STRING description
    JSONB tags
    STRING imageUrl
    UUID albumId FK
    BOOLEAN flagged
    TIMESTAMP createdAt
    TIMESTAMP lastUpdatedAt
  }
  GALLERY_FLAGS {
    UUID id PK
    UUID imageId FK
    UUID userId FK
    STRING reason
    TIMESTAMP createdAt
    TIMESTAMP lastUpdatedAt
  }
  
  USERS ||--o{ GALLERY_ALBUMS : owns
  USERS ||--o{ GALLERY_IMAGES : uploads
  USERS ||--o{ GALLERY_FLAGS : flags
  GALLERY_ALBUMS ||--o{ GALLERY_IMAGES : contains
  GALLERY_IMAGES ||--o{ GALLERY_FLAGS : is_flagged_by
  GALLERY_ALBUMS ||--|{ GALLERY_IMAGES : cover_image 